ci: use gen2 macos executors explicitly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,6 +274,7 @@ jobs:
     working_directory: ~/go/src/github.com/filecoin-project/lotus
     macos:
       xcode: "13.4.1"
+    resource_class: macos.x86.medium.gen2
     steps:
       - build-platform-specific:
           linux: false
