make docsgen-cli

--- a/documentation/en/default-lotus-config.toml
+++ b/documentation/en/default-lotus-config.toml
@@ -115,7 +115,7 @@
   #ElasticSearchTracer = ""
 
   # Name of elasticsearch index that will be used to save tracer data.
-  # This property is used only if ElasticSearchTracer property is set.
+  # This property is used only if ElasticSearchTracer propery is set.
   #
   # type: string
   # env var: LOTUS_PUBSUB_ELASTICSEARCHINDEX
