fee config: Default MaximizeWindowPoStFeeCap to true

--- a/documentation/en/default-lotus-miner-config.toml
+++ b/documentation/en/default-lotus-miner-config.toml
@@ -777,7 +777,7 @@
 
   # type: bool
   # env var: LOTUS_FEES_MAXIMIZEWINDOWPOSTFEECAP
-  #MaximizeWindowPoStFeeCap = false
+  #MaximizeWindowPoStFeeCap = true
 
   [Fees.MaxPreCommitBatchGasFee]
     # type: types.FIL
