--- a/documentation/en/default-lotus-miner-config.toml
+++ b/documentation/en/default-lotus-miner-config.toml
@@ -523,7 +523,7 @@
 
   # CommittedCapacitySectorLifetime is the duration a Committed Capacity (CC) sector will
   # live before it must be extended or converted into sector containing deals before it is
-  # terminated. Value must be between 180-1278 days.
+  # terminated. Value must be between 180-1278 days (1278 in nv21, 540 before nv21).
   #
   # type: Duration
   # env var: LOTUS_SEALING_COMMITTEDCAPACITYSECTORLIFETIME
