Skeleton Test Updates
Skeleton Test Updates

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ dist/
 # in dirty git state if removed from the docker context
 !extern/filecoin-ffi/rust/filecoin.pc
 !extern/test-vectors
+extern/filecoin-ffi
