--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ executors:
       - image: cimg/go:1.20.7
     resource_class: 2xlarge
   ubuntu:
-    docker::
+    docker:
       - image: ubuntu:20.04
 
 commands:
