fix: ci: fetch params for the storage unit tests
In #11212, we added the necessary logic to download the params
automatically. However, we're not taking advantage of CI caching.

Here, we configure CI to cache these params.

--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -557,9 +557,16 @@ workflows:
             - build
           suite: utest-[[ $suite ]]
           target: "[[ $pkgs ]]"
-          [[if eq $suite "unit-cli"]]get-params: true[[end]]
-          [[if eq $suite "unit-cli"]]executor: golang-2xl[[end]]
-          [[- if eq $suite "unit-rest"]]executor: golang-2xl[[end]]
+          [[- if eq $suite "unit-storage"]]
+          get-params: true
+          [[- end -]]
+          [[- if eq $suite "unit-cli"]]
+          executor: golang-2xl
+          get-params: true
+          [[- end -]]
+          [[- if eq $suite "unit-rest"]]
+          executor: golang-2xl
+          [[- end -]]
       [[- end]]
       - test:
           go-test-flags: "-run=TestMulticoreSDR"
