--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1016,6 +1016,8 @@ workflows:
           requires:
             - build
           suite: utest-unit-cli
+          target: "./cli/... ./cmd/... ./api/..."
+          get-params: true
           executor: golang-2xl
           get-params: true
       - test:
@@ -1023,20 +1025,23 @@ workflows:
           requires:
             - build
           suite: utest-unit-node
-
+          target: "./node/..."
+          
       - test:
           name: test-unit-rest
           requires:
             - build
           suite: utest-unit-rest
-
+          target: "./blockstore/... ./build/... ./chain/... ./conformance/... ./gateway/... ./journal/... ./lib/... ./markets/... ./paychmgr/... ./tools/..."
+          
           executor: golang-2xl
       - test:
           name: test-unit-storage
           requires:
             - build
           suite: utest-unit-storage
-          target: "./storage/...
+          target: "./storage/... ./extern/..."
+          
           get-params: true
       - test:
           go-test-flags: "-run=TestMulticoreSDR"
