--- a/documentation/en/default-lotus-provider-config.toml
+++ b/documentation/en/default-lotus-provider-config.toml
@@ -56,32 +56,15 @@
     #PerSector = "0.03 FIL"
 
 
-[Addresses]
-  # Addresses to send PreCommit messages from
-  #
-  # type: []string
+[[Addresses]]
   #PreCommitControl = []
 
-  # Addresses to send Commit messages from
-  #
-  # type: []string
   #CommitControl = []
 
-  # type: []string
   #TerminateControl = []
 
-  # DisableOwnerFallback disables usage of the owner address for messages
-  # sent automatically
-  #
-  # type: bool
   #DisableOwnerFallback = false
 
-  # DisableWorkerFallback disables usage of the worker address for messages
-  # sent automatically, if control addresses are configured.
-  # A control address that doesn't have enough funds will still be chosen
-  # over the worker address if this flag is set.
-  #
-  # type: bool
   #DisableWorkerFallback = false
 
 
