--- a/chain/actors/builtin/evm/actor.go.template
+++ b/chain/actors/builtin/evm/actor.go.template
@@ -10,12 +10,25 @@ import (
 	"github.com/filecoin-project/lotus/chain/actors"
 	"github.com/filecoin-project/lotus/chain/actors/adt"
 	"github.com/filecoin-project/lotus/chain/types"
+
+	"github.com/filecoin-project/go-state-types/exitcode"
 	"github.com/filecoin-project/go-state-types/manifest"
 
 	builtin{{.latestVersion}} "github.com/filecoin-project/go-state-types/builtin"
 )
 
 var Methods = builtin{{.latestVersion}}.MethodsEVM
+
+const (
+	ErrReverted exitcode.ExitCode = iota + 33
+	ErrInvalidInstruction
+	ErrUndefinedInstruction
+	ErrStackUnderflow
+	ErrStackOverflow
+	ErrIllegalMemoryAccess
+	ErrBadJumpdest
+	ErrSelfdestructFailed
+)
 
 func Load(store adt.Store, act *types.Actor) (State, error) {
 	if name, av, ok := actors.GetActorMetaByCode(act.Code); ok {
