--- a/scripts/lotus-daemon.service
+++ b/scripts/lotus-daemon.service
@@ -10,11 +10,13 @@ ExecStart=/usr/local/bin/lotus daemon
 Restart=always
 RestartSec=10
 
-MemoryAccounting=true
-# Depending on the complexity of API usage of this node, you may need to adjust the following
-# memory options. Please monitor the node's performance and adjust accordingly.
-MemoryHigh=8G
-MemoryMax=10G
+# If running a node in a shared, memory constrained environment, enable MemoryAccounting to put
+# pressure on allocations. This will slow the process down but keep it approximately within the
+# limit specified.
+#MemoryAccounting=true
+#MemoryHigh=64G
+#MemoryMax=96G
+
 LimitNOFILE=8192:10240
 
 [Install]
