--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ commands:
                 command: |
                   echo 'export GOPATH="${HOME}/go"' >> $BASH_ENV
             - run: go version
+            - run: go install golang.org/x/text/cmd/gotext
             - run:
                 name: Install dependencies with Homebrew
                 command: HOMEBREW_NO_AUTO_UPDATE=1 brew install pkg-config coreutils jq hwloc
