s/ActorEvents/Events/g in global config

--- a/documentation/en/default-lotus-config.toml
+++ b/documentation/en/default-lotus-config.toml
@@ -339,7 +339,7 @@
 
   [Fevm.Events]
     # DisableRealTimeFilterAPI will disable the RealTimeFilterAPI that can create and query filters for actor events as they are emitted.
-    # The API is enabled when EnableEthRPC or EnableActorEventsAPI is true, but can be disabled selectively with this flag.
+    # The API is enabled when EnableEthRPC or Events.EnableActorEventsAPI is true, but can be disabled selectively with this flag.
     #
     # type: bool
     # env var: LOTUS_FEVM_EVENTS_DISABLEREALTIMEFILTERAPI
@@ -347,7 +347,7 @@
 
     # DisableHistoricFilterAPI will disable the HistoricFilterAPI that can create and query filters for actor events
     # that occurred in the past. HistoricFilterAPI maintains a queryable index of events.
-    # The API is enabled when EnableEthRPC or EnableActorEventsAPI is true, but can be disabled selectively with this flag.
+    # The API is enabled when EnableEthRPC or Events.EnableActorEventsAPI is true, but can be disabled selectively with this flag.
     #
     # type: bool
     # env var: LOTUS_FEVM_EVENTS_DISABLEHISTORICFILTERAPI
@@ -389,14 +389,14 @@
     #DatabasePath = ""
 
 
-[ActorEvents]
+[Events]
   # EnableActorEventsAPI enables the Actor events API that enables clients to consume events
   # emitted by (smart contracts + built-in Actors).
   # This will also enable the RealTimeFilterAPI and HistoricFilterAPI by default, but they can be
   # disabled by setting their respective Disable* options in Fevm.Events.
   #
   # type: bool
-  # env var: LOTUS_ACTOREVENTS_ENABLEACTOREVENTSAPI
+  # env var: LOTUS_EVENTS_ENABLEACTOREVENTSAPI
   #EnableActorEventsAPI = false
 
 
