--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,4 @@
 
 # Global owners
 # Ensure maintainers team is a requested reviewer for non-draft PRs
-*                       @filecoin-project/lotus-maintainers
+*                       @jennijuju @Stebalien @snadrus @aarshkshah1992 @magik6k @zengroud0 @arajasek @rjan90 @masih @rvagg
