--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
         with:
           submodules: 'recursive'
       - id: paths
-        run: ls **/*_test.go | jq -R | jq -sc | xargs -I{} echo "paths={}" | tee -a "$GITHUB_OUTPUT"
+        run: ls **/*_test.go | jq -R | jq -jsc | xargs -0 -I{} echo "paths={}" | tee -a "$GITHUB_OUTPUT"
       - id: tests
         uses: actions/github-script@v7
         env:
