--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,12 +115,12 @@ jobs:
             [
               {
                 "name": "multicore-sdr",
-                "packages": ["storage/sealer/ffiwrapper/sealer_test.go"],
+                "packages": ["./storage/sealer/ffiwrapper/sealer_test.go"],
                 "go_test_flags": "-run=TestMulticoreSDR",
                 "test_rustproofs_logs": "1"
               }, {
                 "name": "conformance",
-                "packages": ["conformance/corpus_test.go"],
+                "packages": ["./conformance/corpus_test.go"],
                 "go_test_flags": "-run=TestConformance",
                 "skip_conformance": "0",
                 "format": "pkgname-and-test-fails",
@@ -149,6 +149,7 @@ jobs:
                 "needs_yugabyte": true
               }, {
                 "name": "itest-wdpost",
+                "needs_params": true,
                 "needs_yugabyte": true
               }, {
                 "name": "itest-eth_deploy",
@@ -160,18 +161,15 @@ jobs:
                 "name": "itest-sector_import_simple",
                 "needs_yugabyte": true
               }, {
-                "name": "wdpost",
-                "needs_params": true
-              }, {
                 "name": "unit-node",
-                "packages": ["node/..."]
+                "packages": ["./node/..."]
               }, {
                 "name": "unit-storage",
-                "packages": ["storage/...", "extern/..."],
+                "packages": ["./storage/...", "./extern/..."],
                 "needs_params": true
               }, {
                 "name": "unit-cli",
-                "packages": ["cli/...", "cmd/...", "api/..."],
+                "packages": ["./cli/...", "./cmd/...", "./api/..."],
                 "runner": ["self-hosted", "linux", "x64", "2xlarge"],
                 "needs_params": true
               }, {
@@ -200,6 +198,7 @@ jobs:
         uses: ./.github/actions/fetch-params
       - if: ${{ matrix.needs_yugabyte }}
         uses: ./.github/actions/start-yugabyte
+        timeout-minutes: 3
       - if: ${{ matrix.needs_statediff }}
         uses: ./.github/actions/install-statediff
       - id: reports
@@ -208,11 +207,10 @@ jobs:
       - env:
           NAME: ${{ matrix.name }}
           LOTUS_SRC_DIR: ${{ github.workspace }}
-          LOTUS_HARMONYDB_HOSTS: localhost
+          LOTUS_HARMONYDB_HOSTS: 127.0.0.1
           REPORTS_PATH: ${{ steps.reports.outputs.path }}
           SKIP_CONFORMANCE: ${{ matrix.skip_conformance || 1 }}
           TEST_RUSTPROOFS_LOGS: ${{ matrix.test_rustproofs_logs || 0 }}
-          GO_TEST_FLAGS: ${{ matrix.go_test_flags || '' }}
           FORMAT: ${{ matrix.format || 'standard-verbose' }}
           PACKAGES: ${{ join(matrix.packages, ' ') }}
         run: |
@@ -221,7 +219,7 @@ jobs:
             --junitfile "$REPORTS_PATH/$NAME.xml" \
             --jsonfile "$REPORTS_PATH/$NAME.json" \
             --packages="$PACKAGES" \
-            -- $GO_TEST_FLAGS
+            -- ${{ matrix.go_test_flags || '' }}
       - if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
